--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "proyecto4-restaurante-restaurante-app",
+    "name": "proyecto5-ecommerce-app",
     "private": true,
     "version": "0.0.0",
     "type": "module",
